@@ -1,9 +1,7 @@
-freakout set
 editor
 
 eye/ear candy:
 stereo sound
-themes should get selection dialog as well
 shine effect
 
 already known bugs:
